LE-37 Correct alignment of Langrefset entries when there's a change in the PT from the previous iteration